samples/_failures_safe/1761393452_c32d55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16accedc.c: In function ‘hex_to_bytes’:
./samples/SAFE/__tmp_16accedc.c:117:9: error: expected identifier or ‘(’ at end of input
  117 |         char
      |         ^~~~
./samples/SAFE/__tmp_16accedc.c:117:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_16accedc.c:117:9: error: expected declaration or statement at end of input
